# langboard

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: format-py.yaml  lint-py.yaml
docker/: docker-compose.pg.yaml  docker-compose.server.yaml  docker-compose.vault.yaml
docker/db_backup/: Dockerfile
docker/envs/: server-common.env.template  server.env.template
docker/server/: conf.template
scripts/: run_bot_cron.sh  run_notification_cron.sh
scripts/utils/: update-docker-envs.sh
src/api/langboard/: App.py  ServerRunner.py
src/api/langboard/commands/: CreateActivityCommand.py  (+6 more)
src/flows/: pyproject.toml
src/graph/: .dockerignore  Dockerfile  pyproject.toml
src/graph/langboard_graph/: App.py  CLI.py  CliExecutor.py  Constants.py  ServerRunner.py
src/graph/langboard_graph/commands/: RunCommand.py
src/graph/langboard_graph/core/graph/: GraphRunner.py  __init__.py  checkpoint.py  registry.py
src/graph/langboard_graph/core/graph/default/: __init__.py  context.py  graph.py  nodes.py  state.py  tooling.py
src/graph/langboard_graph/core/schema/: Exception.py  GraphRequestModel.py  GraphSchema.py  __init__.py
src/graph/langboard_graph/middlewares/: GZipDecompressMiddleware.py
src/graph/langboard_graph/routes/: HealthApi.py  RunApi.py
src/resources/flows/: default_flow.json  lm_studio_flow.json  ollama_flow.json
src/shared/py/: pyproject.toml
src/shared/ts/: package.json
src/socket/: package.json
src/socket/src/: Constants.ts
src/ui/: package.json  vite.config.ts
src/ui/src/: Router.tsx
(+588 files in other folders)
